[gd_scene load_steps=6 format=3 uid="uid://bqhbhnxuprg4s"]

[ext_resource type="Script" path="res://Sprites/main_script.gd" id="1_1lj1s"]
[ext_resource type="Script" path="res://Scripts/Timer_script.gd" id="1_frvny"]
[ext_resource type="PackedScene" uid="uid://qqhiwdugqlmd" path="res://logistics_handler.tscn" id="2_gwgwm"]
[ext_resource type="PackedScene" uid="uid://bais17l2hrh3q" path="res://Resource_maneger.tscn" id="4_q4web"]
[ext_resource type="PackedScene" uid="uid://dkrnq06ivccbn" path="res://log_window.tscn" id="5_mdrh3"]

[node name="Main" type="Node2D"]
script = ExtResource("1_1lj1s")

[node name="Money_label" type="Label" parent="."]
offset_left = 930.0
offset_top = 43.0
offset_right = 1109.0
offset_bottom = 66.0

[node name="Timer" type="Timer" parent="."]
autostart = true
script = ExtResource("1_frvny")

[node name="ProgressBar" type="ProgressBar" parent="Timer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -217.0
offset_top = 18.0
offset_right = -34.0
offset_bottom = 45.0
grow_horizontal = 0
size_flags_horizontal = 8
show_percentage = false

[node name="Logistics_handler" parent="." groups=["logistics"] instance=ExtResource("2_gwgwm")]

[node name="Bangladesh" parent="Logistics_handler" index="0"]
factroies = [2, 2, 3]

[node name="London" parent="Logistics_handler" index="1"]
factroies = [1, 2, 3]

[node name="New_York" parent="Logistics_handler" index="2"]
factroies = [1, 3, 2]

[node name="raw_resources" parent="." instance=ExtResource("4_q4web")]

[node name="Window" parent="." instance=ExtResource("5_mdrh3")]
title = "Logistics Handler"
position = Vector2i(1214, 171)

[node name="Call_Logistics_window" type="Button" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 848.0
offset_top = 13.0
offset_right = 856.0
offset_bottom = 21.0
grow_horizontal = 0
rotation = -0.0191755
scale = Vector2(7.09408, 6.53002)

[connection signal="timeout" from="Timer" to="Logistics_handler" method="_on_timer_timeout"]
[connection signal="connection_created" from="Logistics_handler" to="Logistics_handler/Bangladesh" method="connection_created"]
[connection signal="connection_created" from="Logistics_handler" to="Logistics_handler/London" method="connection_created"]
[connection signal="connection_created" from="Logistics_handler" to="Logistics_handler/New_York" method="connection_created"]
[connection signal="logistics_handler_info" from="Logistics_handler/Bangladesh" to="Logistics_handler" method="logistics_handler_info"]
[connection signal="logistics_handler_info" from="Logistics_handler/London" to="Logistics_handler" method="logistics_handler_info"]
[connection signal="logistics_handler_info" from="Logistics_handler/New_York" to="Logistics_handler" method="logistics_handler_info"]
[connection signal="resource_to_logistics" from="raw_resources" to="Logistics_handler" method="resource_to_logistics"]
[connection signal="pressed" from="Window/VBoxContainer/Button" to="Logistics_handler" method="new_connection_line_is_made"]
[connection signal="pressed" from="Call_Logistics_window" to="Window" method="_on_call"]

[editable path="Logistics_handler"]
[editable path="Window"]
